# ip-labs

./: .gitignore  README.md
L10/: CMakeLists.txt  main.cpp
L11/: CMakeLists.txt  main.cpp
L2/: CMakeLists.txt  main.cpp
L4/: CMakeLists.txt  main.cpp
L5/: CMakeLists.txt  main.cpp
L6/: CMakeLists.txt  main.cpp
L7/: CMakeLists.txt  main.cpp
L8/: CMakeLists.txt  main.cpp
L9/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  PassportScanner.cpp  PassportScanner.h  TextExtractor.cpp  TextExtractor.h  main.cpp
